<resources>
    <string name="app_name">Day Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_a">Fragment Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Get Started</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="tvPassword">Password must be at least 6 characters long</string>
    <string name="title_register">Register Firebase</string>
    <string name="email">Email</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="title_login">Login Firebase</string>
    <string name="google">Sign in with Google</string>
    <string name="login_text"><u>Login</u></string>
    <string name="register_text"><u>Register</u></string>
    <string name="content">content</string>
    <string name="GetStarted">Get started</string>
    <string name="homeTittle">Day Planner</string>
    <string name="homeContent1">Dont procrastinate</string>
    <string name="homeContent2">be happy with Day planner</string>
    <string name="Sign_In">Sign In</string>
    <string name="Sign_off">Sign off</string>
    <string name="tittleMain">Your day planner</string>

</resources>
