<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:text="@string/homeTittle"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/homeImg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"  />

    <View
        android:id="@+id/circle1"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toTopOf="@id/textView1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/circle2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circle"
        app:layout_constraintBottom_toTopOf="@id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.258" />

    <ImageView
        android:id="@+id/homeImg"
        android:layout_width="290dp"
        android:layout_height="293dp"
        android:layout_marginTop="-150dp"
        android:contentDescription="@string/content"
        android:src="@drawable/home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circle2" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeContent1"
        android:fontFamily="@font/open_sans"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/homeImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeContent2"
        android:fontFamily="@font/open_sans"
        android:layout_marginTop="2dp"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/getStartedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:width="310dp"
        android:height="60dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/open_sans"
        android:text="@string/GetStarted"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>