<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clContenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundMain"
        tools:context=".view.LoginActivity">

        <ImageView
            android:id="@+id/toolbar_balls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/shape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWelcomeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome back!"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_marginTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHelpMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Let's help you meet your tasks"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/tvWelcomeBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="198dp"
            android:layout_height="221dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@drawable/preview"
            android:src="@drawable/preview"
            app:layout_constraintTop_toBottomOf="@id/tvHelpMessage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tilEmail"
            app:layout_constraintVertical_bias="0.1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            app:boxBackgroundMode="none"
            app:layout_constraintTop_toBottomOf="@id/imgPreview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            app:boxBackgroundMode="none"
            app:layout_constraintTop_toBottomOf="@id/tilEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/btnGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"

            app:layout_constraintTop_toBottomOf="@id/tilPass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="364dp"
            android:layout_height="64dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/blue"
            android:text="@string/login_text"
            android:textColor="@android:color/white"
            android:textColorLink="#03A9F4"
            android:textSize="25sp"
            app:cornerRadius="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnGoogle" />

        <LinearLayout
            android:id="@+id/llRegisterContainer"
            android:layout_width="219dp"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin">

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:clickable="true"
                android:focusable="true"
                android:text="Don't have an account? "
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Sign Up"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
